chore: fix wrapping and padding in footer

--- a/source/stylesheets/layout.css.sass
+++ b/source/stylesheets/layout.css.sass
@@ -679,7 +679,6 @@ footer
   .inner
     position: relative
     display: flex
-    align-items: center
     width: 100%
 
   .social-icons
@@ -805,6 +804,18 @@ footer
   .icon-cart
     top: -4px
 
+  /* Footer */
+  footer
+    min-height: 120px
+
+    .inner
+      flex-direction: column
+      gap: 20px
+      margin: 40px 0
+
+    .footer-text
+      margin: auto
+
 
 /* SMALL */
 @media only screen and (max-width : $break-small)
@@ -824,7 +835,7 @@ footer
 
   footer .inner
     min-height: 34px
-    padding: 24px 0
+    padding: 44px 0
     text-align: center
 
   /* Modules */
@@ -835,17 +846,6 @@ footer
     width: 100%
     left: 0
     text-align: center
-
-  /* Footer */
-  footer
-    min-height: 120px
-
-    .inner
-      flex-direction: column
-      gap: 20px
-
-    .footer-text
-      margin: auto
 
   /* DOM mods */
   .visible-phone
